language/move-lang/tests/move_check/parser/byte_string_invalid_hex.exp
error: 

   ┌── tests/move_check/parser/byte_string_invalid_hex.move:3:19 ───
   │
 3 │         b"libra \xG0"
   │                   ^ Invalid hexadecimal character: 'G'
   │

